--- a/index.html
+++ b/index.html
@@ -6,12 +6,38 @@
   <link rel="stylesheet" href="styles/css/minified/main.min.css">
   <title>Document</title>
 </head>
-<body>
+<body style="  background: var(--dark-background, #181818);
+">
+  <header>
+  <div class="container">
   <!-- header -->
+<div class="header-flex">
+  <a href=""><img src="img/logo dark.png" alt=""></a>
+  <ul>
+    <li><a class="header-li" href="#">Home</a></li>
+    <li><a class="header-li" href="#">Product</a></li>
+    <li><a class="header-li" href="#">About</a></li>
+    <li><a class="header-li" href="#">Contact</a></li>
+  </ul>
+  <button class="header-login" >Login</button>
+</div>
+
+<nav>
+
+  <div class="nav-h1">
+    <h1>Work at the speed <br> of thought</h1>
+
+    <p>Most calendars are designed for teams. Slate is designed for <br> freelancers who want a simple way to plan their schedule.</p>
+  </div>
+
+</nav>
+</header>
   <!-- header end -->
 
   <!-- zokhid section -->
-  <h1>salo</h1>
+  
   <!-- zokhid section -->
+
+  </div>
 </body>
 </html>
