page yarmi bitkazildi

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="styles/css/minified/main.min.css">
   <title>Document</title>
 </head>
-<body style="  background: var(--dark-background, #181818);
+<body  style="  background: var(--dark-background, #181818) ; 
 ">
   <header>
   <div class="container">
@@ -28,11 +28,38 @@
     <h1>Work at the speed <br> of thought</h1>
 
     <p>Most calendars are designed for teams. Slate is designed for <br> freelancers who want a simple way to plan their schedule.</p>
+<div class="nav-button-flex">
+    <button class="nav-button">Try For Free</button>
+<button class="nav-btn-2">Learn More</button>
+    </div>
   </div>
 
+  <img class="nav-img" src="img/nav-img.png" alt="">
 </nav>
 </header>
   <!-- header end -->
+
+  <section>
+<div>
+  
+  <div class="article-div">
+    <div class="h2-div">
+    <h2 >FEATURES</h2>
+    </div>
+
+    <p class="article-p">Most calendars are designed for teams. Slate is designed for <br> freelancers who want a simple way to plan their schedule.</p>
+ <div class="article-flex">
+    <div class="chat-img" style="background-image: url(img/article-chat-img.png);">
+    <img class="article-line" src="img/article-line-chat.png" alt=""></div>
+
+  <div class="article-knife">
+      <p class="icon-1"><span class="icon"><img src="img/knife.png" alt=""></span>A single source <br> of truth</p>
+  </div>
+  </div>
+  </div>
+
+</article>
+  </section>
 
   <!-- zokhid section -->
   
