--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@
 
 
     <aside>
-<h2 class="aside-contact">Contacts</h2>
+<div class="aside-text">
+  <h2 class="aside-contact">Contacts</h2>
+  <p class="aside-p">We focus on ergonomics and meeting you where you work. <br> It's only a keystroke away.</p>
+</div>
      
       
     </aside>
