--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="styles/css/minified/main.min.css">
   <title>Document</title>
 </head>
@@ -35,7 +36,73 @@
   <!-- header end -->
 
   <!-- zokhid section -->
-  
+  <div class="zohid">
+    <h2>Partners</h2>
+    <p>We focus on ergonomics and meeting you where you work. It's only a keystroke away.</p>
+    <div class="icon">
+      <img src="./img/logos_apple-app-store.png" alt="">
+      <img src="./img/logos_apiary.png" alt="">
+      <img src="./img/logos_android-icon.png" alt="">
+      <img src="./img/logos_basecamp.png" alt="">
+      <img src="./img/logos_airbnb.png" alt="">
+      <img src="./img/logos_ibm.png" alt="">
+    </div>
+    <button class="header-loginn" >All Partners</button>
+  </div>
+
+  <div class="section-1">
+    <h2>Testimonials</h2>
+    <div class="card">
+      <div class="card-1">
+        <img src="./img/client.svg" alt="">
+        <p>Slate helps you see how many more days 
+          you need to work to reach your financial 
+          goal for the month and year. Slate helps 
+          you see how many more days 
+          you need to work to reach your financial 
+          goal for the month and year.your financial 
+          goal for the month and year.</p>
+      </div>
+      <div class="card-2">
+        <img src="./img/client1.png" alt="">
+        <p>Slate helps you see how many more days 
+          you need to work to reach your financial 
+          goal for the month and year. Slate helps 
+          you see how many more days 
+          you need to work to reach your financial 
+          goal for the month and year.</p>
+      </div>
+    </div>
+    <div class="cards">
+      <div class="card-3">
+        <img src="./img/client3.png" alt="">
+        <p>Slate helps you see how many more days 
+          you need to work to reach your financial 
+          goal for the month and year. Slate helps 
+          you see how many more days 
+          you need to work to reach your financial 
+          goal for the month and year.</p>
+      </div>
+      <div class="card-4">
+        <img src="./img/cilent2.png" alt="">
+        <p>Slate helps you see how many more days 
+          you need to work to reach your financial 
+          goal for the month and year. Slate helps 
+          you see how many more days 
+          you need to work to reach your financial 
+          goal for the month and year.</p>
+      </div>
+    </div>
+  </div>
+  <div class="section-2">
+    <div class="left-1">
+      <h2>OpenType features 
+        and Variable fonts</h2>
+    </div>
+    <div class="left-2"></div>
+  </div>
+
+
   <!-- zokhid section -->
 
   </div>
