--- a/index.html
+++ b/index.html
@@ -136,6 +136,20 @@
   <h2 class="article-gallery">Gallery</h2>
   <p class="aside-p">We focus on ergonomics and meeting you where you work. <br> It's only a keystroke away.</p>
 </div>
+
+<div class="article-imgs">
+  <img src="img/article-img.png" alt="">
+  <img src="img/article-img-2.png" alt="">
+  <img src="img/article-img-3.png" alt="">
+  <img src="img/article-img-4.png" alt="">
+</div>
+
+<div class="article-imgs-2">
+  <img src="img/article-img-5.png" alt="">
+  <img src="img/article-img-6.png" alt="">
+  <img src="img/article-img-7.png" alt="">
+ 
+</div>
     </article>
     
     
