--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <p>Most calendars are designed for teams. Slate is designed for <br> freelancers who want a simple way to plan their schedule.</p>
 <div class="nav-button-flex">
-    <button class="nav-button">Try For Free</button>
+  <button class="nav-button">Try For Free</button>
 <button class="nav-btn-2">Learn More</button>
     </div>
   </div>
@@ -125,9 +125,15 @@
     <div class="left-1">
       <h2>OpenType features 
         and Variable fonts</h2>
+        <button class="nav-buttonn">Try For Free</button>
     </div>
-    <div class="left-2"></div>
+    <div class="left-2">
+      <img src="./img/Line Chart 1.png" alt="">
+    </div>
   </div>
+  <footer>
+    
+  </footer>
 
 
   <!-- zokhid section -->
